crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_add_modal_add_anyway_confirmation.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│ ▶ gith│ Mode: ▶ Manual ◀     URI       QR                            │55 062 │
│       │                                                              │       │
│       │ Label:      [  ]                                             │       │
│       │ Issuer:     [  ]                                             │       │
│       │ Secret:     [  ]                                             │       │
│       │ Algorithm:  SHA1                                             │       │
│       │ Digits:     6                                                │       │
│       │ Kind:       TOTP                                             │       │
│       │ Period (s): 30                                               │       │
│       │ Icon hint:  [  ]                                             │       │
│       │                                                              │       │
│       │ account already exists with the same (secret, issuer, label) │       │
│       │                                                              │       │
│       │                Enter add anyway  ·  Esc cancel               │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
