crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_add_modal_qr_counts_panel.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────┌ Add account ─────────────────────────────────────────────────┐────── │
│       │ Import complete.                                             │       │
│       │                                                              │       │
│       │ Imported:    2                                               │       │
│       │ Skipped:     1                                               │       │
│       │ Replaced:    0                                               │       │
│       │ Appended:    0                                               │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                                                              │       │
│       │                     Enter or Esc to close                    │       │
│ ──────└──────────────────────────────────────────────────────────────┘────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
